--- a/app/src/main/res/layout/activity_nombre_ocio.xml
+++ b/app/src/main/res/layout/activity_nombre_ocio.xml
@@ -21,14 +21,24 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="TextView" />
+                android:text="TextView"
+                android:textAlignment="center"
+                android:textSize="25sp" />
 
             <ImageView
                 android:id="@+id/imagenOcio"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                tools:srcCompat="@tools:sample/avatars" />
+                tools:srcCompat="@drawable/ic_launcher_foreground" />
+
+            <Button
+                android:id="@+id/button2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Button" />
+
         </LinearLayout>
     </LinearLayout>
 </FrameLayout>
