--- a/app/src/main/res/layout/activity_nombre_ocio.xml
+++ b/app/src/main/res/layout/activity_nombre_ocio.xml
@@ -17,7 +17,7 @@
 
             <TextView
                 android:id="@+id/nombreOcio"
-                android:layout_width="354dp"
+                android:layout_width="246dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center"
@@ -26,14 +26,14 @@
                 android:textSize="25sp" />
 
             <ImageView
-                android:id="@+id/imagenOcio"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:id="@+id/imageView"
+                android:layout_width="121dp"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
-                tools:srcCompat="@drawable/ic_launcher_foreground" />
+                app:srcCompat="@drawable/ocio" />
 
             <Button
-                android:id="@+id/button2"
+                android:id="@+id/button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
