--- a/app/src/main/res/layout/activity_adapter_cine.xml
+++ b/app/src/main/res/layout/activity_adapter_cine.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".categorias.teatros.IndexTeatro">
+    tools:context=".categorias.cines.AdapterCine">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
