--- a/app/src/main/res/layout/activity_adapter_teatro.xml
+++ b/app/src/main/res/layout/activity_adapter_teatro.xml
@@ -20,74 +20,72 @@
         android:orientation="vertical"
         app:layout_constraintGuide_begin="336dp" />
 
-    <LinearLayout
-        android:layout_width="334dp"
-        android:layout_height="150dp"
-        android:layout_marginTop="4dp"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toTopOf="@+id/guideline9"
-        app:layout_constraintEnd_toStartOf="@+id/guideline10"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0">
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cvTeatro"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:layout_editor_absoluteX="2dp">
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_width="334dp"
+            android:layout_height="150dp"
+            android:layout_marginTop="4dp"
+            android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/textViewTitulo"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="38dp"
-                android:text="TITULO" />
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/textViewCategoria"
-                android:layout_width="match_parent"
-                android:layout_height="36dp"
-                android:text="CATEGORIA" />
+                <TextView
+                    android:id="@+id/textViewTitulo"
+                    android:layout_width="match_parent"
+                    android:layout_height="38dp"
+                    android:text="TITULO" />
 
-            <TextView
-                android:id="@+id/textViewDescripcion"
-                android:layout_width="match_parent"
-                android:layout_height="35dp"
-                android:text="DESCRIPCION" />
+                <TextView
+                    android:id="@+id/textViewCategoria"
+                    android:layout_width="match_parent"
+                    android:layout_height="36dp"
+                    android:text="CATEGORIA" />
 
-            <TextView
-                android:id="@+id/textViewDirecion"
-                android:layout_width="match_parent"
-                android:layout_height="41dp"
-                android:text="DIRECCION" />
+                <TextView
+                    android:id="@+id/textViewDescripcion"
+                    android:layout_width="match_parent"
+                    android:layout_height="35dp"
+                    android:text="DESCRIPCION" />
+
+                <TextView
+                    android:id="@+id/textViewDirecion"
+                    android:layout_width="match_parent"
+                    android:layout_height="41dp"
+                    android:text="DIRECCION" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="74dp"
+                android:layout_height="145dp"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <Button
+                        android:id="@+id/button7"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Button" />
+
+                    <Button
+                        android:id="@+id/button8"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Button" />
+                </LinearLayout>
+            </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
-    <LinearLayout
-        android:layout_width="74dp"
-        android:layout_height="145dp"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toTopOf="@+id/guideline9"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/guideline10"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <Button
-                android:id="@+id/button7"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Button" />
-
-            <Button
-                android:id="@+id/button8"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Button" />
-        </LinearLayout>
-    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
